# nirs4all-benchmarks

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DATA_MANAGEMENT.md  DESIGN.md  Dockerfile  LICENSING.md  LICENSING_FR.md  PERSISTENCE_FORMATS.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  pages.yml  publish.yml  version-guard.yml
LICENSES/: COMMERCIAL-LICENSE.md  COMMERCIAL-LICENSE_FR.md
docs/: ADAPTERS.md  API.md  ARCHITECTURE.md  CLI.md  CONTRACT.md  DATAVIZ.md  DEPLOYMENT.md  IDENTITY.md  INGESTION.md  PERFORMANCE.md  ROADMAP.md  conf.py  index.md  requirements.txt
docs/maintenance/: final_report.md  quality_gates.md  release_checklist.md  repository_audit.md
docs/maintenance/codex_reviews/: 03_main_diff_review.md  04_final_release_readiness_review.md
src/nirs4all_benchmarks/: __init__.py  cli.py  indexing.py  performance_compare.py  site_build.py  version.py
src/nirs4all_benchmarks/adapters/: __init__.py  dagml_bundle.py  n4a_bundle.py  nirs4all_workspace.py
src/nirs4all_benchmarks/contract/: __init__.py  arena_run_export.py
src/nirs4all_benchmarks/contract/schema/: __init__.py  arena_run_export.schema.json
src/nirs4all_benchmarks/datasets/: __init__.py  catalog.py  dataset_card.py
src/nirs4all_benchmarks/fixtures/: __init__.py  generate.py
src/nirs4all_benchmarks/identity/: __init__.py  hashing.py  pipeline_dag.py
src/nirs4all_benchmarks/ingestion/: __init__.py  ingest.py  pseudonymize.py  report.py  repository.py  resolve.py  upload.py  validate.py
src/nirs4all_benchmarks/scoring/: __init__.py  metrics.py  score_spec.py
src/nirs4all_benchmarks/service/: __init__.py  app.py
src/nirs4all_benchmarks/store/: __init__.py  arena_store.py  queries.py  residual_store.py  schema.sql
src/nirs4all_benchmarks/web/: app.js  config.js  index.html  styles.css
src/nirs4all_benchmarks/web/lib/: api.js  dom.js  graph.js  plot.js  static-engine.js
src/nirs4all_benchmarks/web/views/: compare.js  composition.js  datasets.js  landscape.js  leaderboard.js  matrix.js  network.js  operator-effect.js  overview.js  parallel.js  param-effect.js  pipelines.js  planned.js  playground.js  robustness.js  run-detail.js  runs.js  statistics.js  upload.js
tests/: conftest.py  test_adapters.py  test_contract.py  test_fixtures_regression.py  test_identity.py  test_ingestion.py  test_performance_compare.py  test_queries.py  test_repository_bridge.py  test_scoring.py  test_service_api.py  test_site_build.py  test_store.py  test_upload_indexing.py  test_version_metadata.py
