[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "nirs4all-benchmarks"
dynamic = ["version"]
description = "The Arena — a reproducible, scored, weights-free benchmark store and dataviz service for nirs4all / dag-ml NIRS pipelines."
readme = "README.md"
requires-python = ">=3.10"
license = "CeCILL-2.1 OR AGPL-3.0-or-later"
license-files = ["LICENSE", "LICENSES/*.txt"]
authors = [
    { name = "Gregory Beurier", email = "beurier@cirad.fr" },
]
keywords = [
    "nirs",
    "near-infrared",
    "spectroscopy",
    "benchmark",
    "leaderboard",
    "reproducibility",
    "dag-ml",
    "nirs4all",
    "dataviz",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    # Identity / contract
    "pydantic>=2.6",
    "jsonschema>=4.21",
    # Store: SQLite is stdlib; Parquet via pyarrow (the nirs4all workspace format)
    "pyarrow>=15.0",
    "numpy>=1.24",
    # CLI
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
service = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
]
# Optional producer adapters. The Arena works without these (degraded paths);
# install them only when ingesting live from the corresponding producer.
nirs4all = ["nirs4all>=0.10"]
dagml = ["dag-ml-py>=0.1"]
datasets = ["nirs4all-datasets>=0.2", "pyyaml>=6.0"]
all = [
    "nirs4all-benchmarks[service,datasets]",
]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "types-jsonschema",
    "types-pyyaml",
]

[project.urls]
Homepage = "https://github.com/GBeurier/nirs4all-benchmarks"
Repository = "https://github.com/GBeurier/nirs4all-benchmarks"
Ecosystem = "https://github.com/GBeurier/nirs4all-ecosystem"

[project.scripts]
n4a-benchmarks = "nirs4all_benchmarks.cli:main"
n4a-arena = "nirs4all_benchmarks.cli:main"

[tool.hatch.version]
path = "src/nirs4all_benchmarks/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/nirs4all_benchmarks"]
artifacts = ["src/nirs4all_benchmarks/web/**/*"]

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]
ignore = [
    "B008",   # typer uses function calls in argument defaults
    "RUF012", # mutable class attrs without ClassVar — pydantic/dataclass friendly
    "RUF002", # ambiguous unicode in docstrings — NIRS pipeline labels use →/×/—
    "RUF003", # ambiguous unicode in comments — same reason
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "E501"]

[tool.mypy]
python_version = "3.10"
packages = ["nirs4all_benchmarks"]
mypy_path = "src"
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
filterwarnings = ["ignore::DeprecationWarning"]
